--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^4.0.0",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "@majidh1/jalalidatepicker": "^0.9.11"
     }
 }
